create slide menu in mobile size main window

--- a/css/index-large.css
+++ b/css/index-large.css
@@ -21,7 +21,7 @@
     }
     
     .burger-menu-button, .main-title, 
-    .dropdown-menu-section, .menu-points {
+    .dropdown-menu-section, .menu-points, .nav-trigger, .nav-item {
         display: none;
     }
    
