--- a/css/index-small.css
+++ b/css/index-small.css
@@ -66,7 +66,6 @@
   background: inherit;
   position: absolute;
   top: 0;
-  
   bottom: 100%;
   left: 0;
   z-index: 30;
@@ -84,8 +83,8 @@ label[for="nav-trigger"] {
   position: fixed;
   left: 16px; top: 15px;
   z-index: 1000;
-  height: 36px;
-  width: 50px;
+  height: 46px;
+  width: 40px;
   cursor: pointer;
   background-size: contain;
   display: flex;
@@ -97,20 +96,18 @@ label[for="nav-trigger"] {
   margin: 4px;
   width: 32px;
   height: 4px;
+  border-radius: 1px;
 }
 
 .nav-trigger + label, .site-wrap, .navigation, .cover {
   transition: left 0.5s; 
 }
 
-
-
-.nav-trigger:hover label #one, label #two, label #three {
-  background-color: rgba(100,100,100,0.5);
-  transition: all 0.4s;
+.nav-trigger:hover ~ label[for="nav-trigger"] {
+  transform: scale(1.04,1.04);
+  transition: 0.3s;
 }
   
- 
 .nav-trigger:checked ~ label #one {
   position: absolute;
   top: 8px;
