--- a/css/index-small.css
+++ b/css/index-small.css
@@ -49,19 +49,20 @@
 }
  
 .cover {
-  min-height: 370%;
+  min-height: 380%;
   min-width: 100%;
-  height: 100%;
+  height: 380%;
   left: 0;
   top: 0;
   position: absolute;
   z-index: 25; 
   background: rgba(0,0,0,0.4);
+  padding: 4em 0;
 }
   
 /* Site Wrapper - Everything that isn't navigation */
 .site-wrap {
-  min-height: 370%;
+  min-height: 380%;
   min-width: 100%;
   background: inherit;
   position: absolute;
@@ -89,6 +90,7 @@ label[for="nav-trigger"] {
   background-size: contain;
   display: flex;
   flex-direction: column;
+  transition: all 0.5s ease-in-out;
 }
 
   label #one, label #two, label #three {
@@ -99,14 +101,13 @@ label[for="nav-trigger"] {
   border-radius: 1px;
 }
 
-.nav-trigger + label, .site-wrap, .navigation, .cover {
+.nav-trigger, .site-wrap, .navigation, .cover {
   transition: left 0.5s; 
 }
 
 .nav-trigger:hover ~ label {
   transform: scale(1.05);
   opacity: 0.7;
-  transition: all 0.5s ease-in-out;
 }
   
 .nav-trigger:checked ~ label #one {
@@ -182,7 +183,7 @@ label[for="nav-trigger"] {
   left: 200px;
   box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
   z-index: 15;
-  height: 370%;
+  height: 380%;
 }
 
 
