--- a/css/index-small.css
+++ b/css/index-small.css
@@ -1,10 +1,14 @@
  body {
   overflow-x: hidden;
+  max-width: 664px;
+  min-width: 320px;
+  margin: 0 auto;
 }
+    
  
  .menu, .menu-button {
         display: none;
-    }
+}
 
 /* -------------- Section slade menu section -------------------------------- */
 
@@ -37,7 +41,7 @@
   background: rgba(0,0,0,0.0);
   color: black;
   font-family: Righteous;
-  font-size: 4.5vh;
+  font-size: 4vh;
   text-decoration: none;
   text-align: left;
   transition: color 0.7s, background-color 1.5s;
@@ -196,19 +200,19 @@ label[for="nav-trigger"] {
     }
     
    ul {
-       text-align: center;
+       text-align: left;
    }
    
    #pt a {
-       justify-content: center;
+       justify-content: left;
    }
    
-  .col1 li:hover .arrow {
+  .col1 li:hover .ball {
        transform: translateX(35px);
        opacity: 1;
     }
     
-  .col1 li:hover #arrow-pt  {
+  .col1 li:hover #ball-pt  {
         transform: translateX(35px);
     	opacity: 1;
     }
