--- a/css/index.css
+++ b/css/index.css
@@ -57,11 +57,6 @@ table {
         background-color: black;  
     }
     
-    body {
-    	max-width: 980px;
-        min-width: 320px;
-    	margin: 0 auto;
-    }
     
     nav {
         display: -webkit-flex;
@@ -98,7 +93,7 @@ table {
     	opacity: 1;
     }
     
-    .arrow {
+    .ball {
         position: absolute;
     	opacity: 0;
     	vertical-align: 1.5px;
@@ -107,7 +102,7 @@ table {
     	padding-top: 0.87em;
     }
     
-    #arrow-pt {
+    #ball-pt {
     	opacity: 0;
     	vertical-align: 1.5px;
     	font-size: 0.6em;
