--- a/css/index-small.css
+++ b/css/index-small.css
@@ -41,7 +41,7 @@
   background: rgba(0,0,0,0.0);
   color: black;
   font-family: Righteous;
-  font-size: 60%;
+  font-size: 3.7vh;
   text-decoration: none;
   text-align: left;
   transition: color 0.7s, background-color 1.5s;
